Projet_GL/src/test/deca/context/valid/unprovided/testObjet/castIntToFloat.deca
// Description:
//    Utilisation de cast
//
// Resultat:
//    Aucune erreur attendue
//
// Historique:
//    Créé le 24/01/2018
{
	int a;
	float x = (float)(a);
}