Projet_GL/src/test/deca/context/invalid/unprovided/badAssign.deca
// Description:
//    Declaration d'une variable de type void
//
// Resultat: Ligne 11
//    ContextualError: Impossible initialization
//
// Historique:
//    cree le 24/01/2018

{
	int a = true;
}
